fix ms-new component to allow for multiple ms-news within the same step and collect up the selected bookmarked items in a common ms-news-attachment component fix expand / collapse issue UF-465 UF-438

--- a/src/app/core/directives/ms-news/ms-news-attachment/ms-news-attachment.scss
+++ b/src/app/core/directives/ms-news/ms-news-attachment/ms-news-attachment.scss
@@ -1,11 +1,25 @@
-div#msNewsAttachment {
+div#attachments {
     >ms-accordion {
         >div#ms-accordion {
             padding: 0;
-            min-height: 50px;
+            min-height: 60px;
             >div {
                 padding-left: 1%;
-                min-height: 50px;
+                min-height: 60px;
+            }
+        }
+        >md-content#ms-accordion-content {
+            >div#ms-news-attachment-content {
+                >ms-accordion { 
+                    >div#ms-accordion {
+                        padding: 0;
+                        min-height: 50px;
+                        >div {
+                            padding-left: 1%;
+                            min-height: 50px;
+                        }
+                    }
+                }
             }
         }
     }
